:sparkles: Renamed Export boards to PDF option
Two instances of this changed

Signed-off-by: Prithvi Tharun <ptrithu8@gmail.com>

--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -312,11 +312,11 @@ msgid "dashboard.export-binary-multi"
 msgstr "Download %s Penpot files (.penpot)"
 
 msgid "dashboard.export-frames"
-msgstr "Export boards to PDF"
+msgstr "Export boards as PDF"
 
 #: src/app/main/ui/export.cljs
 msgid "dashboard.export-frames.title"
-msgstr "Export to PDF"
+msgstr "Export as PDF"
 
 msgid "dashboard.export-multi"
 msgstr "Export Penpot %s files"
