--- a/frontend/src/app/main/ui/ds/foundations/text.mdx
+++ b/frontend/src/app/main/ui/ds/foundations/text.mdx
@@ -1,20 +1,20 @@
 import { Canvas, Meta } from "@storybook/blocks";
-import * as HeadingStories from "./heading.stories";
+import * as TextStories from "./text.stories";
 
-<Meta of={HeadingStories} />
+<Meta of={TextStories} />
 
-# Headings
-
-This component will add a heading tag element to our code.
+# Texts
+This component will add a text element to our code that will match the tag prop.
 
 ## Technical notes
 
 This components accepts to props:
 
-- `level` (default value: `1`) : A number from `1` to `6`, to set the heading level (i.e. `<h1>`, `<h2>`, etc.). 
+- `tag` (default value: `p`) : Give a proper tag name (i.e. `p`, `span`, etc.). 
 - `typography` (mandatory): Any of the [supported typography IDs](?path=/docs/foundations-typography--docs).
 
-You can check passed props to renderized components on hover `level / typography`;
+You can check passed props to renderized components on hover `tag / typography`
+
 
 ### Using typography IDs
 
@@ -28,21 +28,21 @@ Assuming the namespace of the typography is required as `t`:
 ```clj
 (ns app.main.ui.foo
   (:require
-   [app.main.ui.ds.foundations.heading :refer [heading*]]
+   [app.main.ui.ds.foundations.text :refer [text*]]
    [app.main.ui.ds.foundations.typography :as t]))
 ```
 
 You can now use the typography IDs defined in the namespace:
 
 ```clj
-[:> heading* {:typography t/title-large} "Welcome to Penpot"]
+[:> text* {:typography t/title-large :tag "p"} "Welcome to Penpot"]
 ```
 
 ## Accesibility
 
 There should only be one level 1 heading `<h1>` per page.
 
-Headings are used to navigate the page and must follow the `<h1>` → `<h2>` → `<h3>` → `<h4>` → `<h5>` → `<h6>` hierarchy.
-For example, do not skip levels in the `<h1>` → `<h3>` hierarchy if there is no `<h2>` in between.
+Headings are used to navigate the page and must follow the `<h1>` -> `<h2>` -> `<h3>` -> `<h4>` -> `<h5>` ->  `<h6>` hierarchy.
+For example, do not skip levels in the `<h1>` -> `<h3>` hierarchy if there is no `<h2>` in between.
 
 We should not choose the heading level by its visual aspect.
