--- a/frontend/src/app/main/ui/ds/layout/tab_switcher.mdx
+++ b/frontend/src/app/main/ui/ds/layout/tab_switcher.mdx
@@ -2,7 +2,7 @@ import { Canvas, Meta } from '@storybook/blocks';
 import * as TabSwitcher from "./tab_switcher.stories";
 
 
-<Meta title="Tab switcher" />
+<Meta title= "Layout/Tab Switcher" />
 
 # Tab Switcher
 
