--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -439,6 +439,55 @@ msgstr ""
 "Files added to Libraries will appear here. Try sharing your files or add "
 "from our [Libraries & templates](https://penpot.app/libraries-templates)."
 
+
+
+
+
+
+
+
+#: src/app/main/ui/dashboard/placeholder.cljs
+msgid "dashboard.empty-placeholder-libraries-title"
+msgstr "No libraries yet."
+
+#: src/app/main/ui/dashboard/placeholder.cljs
+#, markdown
+msgid "dashboard.empty-placeholder-libraries-subtitle"
+msgstr ""
+"Files added to Libraries will appear here. Try sharing your files or add "
+"from our [Libraries & templates](https://penpot.app/libraries-templates)."
+
+#: src/app/main/ui/dashboard/placeholder.cljs
+msgid "dashboard.empty-placeholder-libraries-subtitle-viewer-role"
+msgstr "Files added to Libraries will appear here."
+
+#: src/app/main/ui/dashboard
+msgid "dashboard.empty-placeholder-drafts-title"
+msgstr "No drafts yet."
+
+#: src/app/main/ui/dashboard
+msgid "dashboard.empty-placeholder-drafts-subtitle"
+msgstr "Once a project member creates a draft, it will be displayed here."
+
+#: src/app/main/ui/dashboard
+msgid "dashboard.empty-placeholder-files-title"
+msgstr "No files yet."
+
+#: src/app/main/ui/dashboard
+msgid "dashboard.empty-placeholder-files-subtitle"
+msgstr "Once a project member creates a file, it will be displayed here."
+
+
+
+
+
+
+
+
+
+
+
+
 #: src/app/main/ui/dashboard/file_menu.cljs:249
 msgid "dashboard.export-binary-multi"
 msgstr "Download %s Penpot files (.penpot)"
@@ -540,6 +589,14 @@ msgstr "Dismiss all"
 #: src/app/main/ui/dashboard/fonts.cljs:436
 msgid "dashboard.fonts.empty-placeholder"
 msgstr "Custom fonts you upload will appear here."
+
+#: src/app/main/ui/dashboard/fonts.cljs:436
+msgid "dashboard.fonts.empty-placeholder-viewer"
+msgstr "No custom fonts yet."
+
+#: src/app/main/ui/dashboard/fonts.cljs:436
+msgid "dashboard.fonts.empty-placeholder-viewer-sub"
+msgstr "Once a project member uploads a custom font, it will be displayed here."
 
 #: src/app/main/ui/dashboard/fonts.cljs:194
 msgid "dashboard.fonts.fonts-added"
@@ -694,6 +751,22 @@ msgstr "+ New project"
 #: src/app/main/data/dashboard.cljs:727, src/app/main/data/dashboard.cljs:1184
 msgid "dashboard.new-project-prefix"
 msgstr "New Project"
+
+#: src/app/main/data/dashboard.cljs:72
+msgid "dashboard.permissions-change.viewer"
+msgstr "You are now a viewer on this team."
+
+#: src/app/main/data/dashboard.cljs:75
+msgid "dashboard.permissions-change.editor"
+msgstr "You are now an editor on this team."
+
+#: src/app/main/data/dashboard.cljs:78
+msgid "dashboard.permissions-change.admin"
+msgstr "You are now an admin on this team."
+
+#: src/app/main/data/dashboard.cljs:81
+msgid "dashboard.permissions-change.owner"
+msgstr "You are now owner on this team."
 
 #: src/app/main/ui/dashboard/search.cljs:60
 msgid "dashboard.no-matches-for"
